# Jobify_AppServer

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  ChatController.cpp  ChatController.h  Dockerfile  Doxyfile  README.md  SharedServerController.cpp  TecnicalDoc.md  jobify-appserver-serverAPI.yaml  main.cpp  user_alepox.json
doc/html/: annotated.html  classes.html  deprecated.html  dir_2241064965c8d9ca993f08b926076f7d.html  dir_310675020d82345d0e8d5e4779b9425e.html  dir_45551511434f4bb115719b725b59faf6.html  dir_4702834013032ce4377d23770ba447a8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6e33d6500a76933db4361f663e54ab12.html  dir_7a3d096d100e917355aeba76f6cdb4a9.html  dir_7bfadfec917ecdec65e2e04fdab137ec.html  dir_97b73bdd358e9c5ab6ea9e23c645e087.html  dir_a9f6fcf89ad48f46cc9c205933a20eaf.html  dir_bb39ea59592983ec6ae19f64f49b4f72.html  dir_be8373782f1de33088a64d663d68fee6.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_a.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_k.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  (+161 more)
doc/html/d0/d0b/: classel_1_1base_1_1LogDispatcher-members.html
doc/html/d0/d14/: classRestAPITest_1_1TestCase__inherit__graph.md5  classel_1_1LevelHelper__inherit__graph.map
doc/html/d0/d20/: classMongoose_1_1WebSocket__coll__graph.map  classMongoose_1_1WebSocket__coll__graph.md5
doc/html/d0/d28/: classel_1_1Loggers_1_1ScopedRemoveFlag-members.html
doc/html/d0/d33/: HaversineDistance_8h_source.html
doc/html/d0/d3d/: classel_1_1PerformanceTrackingData-members.html
doc/html/d0/d48/: classClientSharedServer.html
doc/html/d0/d53/: Session_8h_source.html  classMongoose_1_1StreamResponse.html
doc/html/d0/d59/: classJobifyServer__inherit__graph.md5
doc/html/d0/d5b/: classKeyDoesntExistException.html
doc/html/d0/d64/: classel_1_1Configurations.html
doc/html/d0/d65/: classJson_1_1LogicError-members.html
doc/html/d0/d6b/: classel_1_1Configuration.html  classel_1_1Loggers_1_1ScopedRemoveFlag.html
doc/html/d0/d6d/: classJson_1_1OurCharReader__coll__graph.map  classJson_1_1OurCharReader__coll__graph.md5
doc/html/d0/d7e/: classJson_1_1Features.html
doc/html/d0/d8a/: classJson_1_1Values__coll__graph.map  classJson_1_1Values__coll__graph.md5
doc/html/d0/d93/: structvec.html
doc/html/d0/d98/: classJson_1_1CharReader_1_1Factory-members.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+53 more)
doc/latex/: annotated.tex  dir_2241064965c8d9ca993f08b926076f7d.tex  dir_310675020d82345d0e8d5e4779b9425e.tex  dir_45551511434f4bb115719b725b59faf6.tex  dir_4702834013032ce4377d23770ba447a8.tex  dir_6e33d6500a76933db4361f663e54ab12.tex  dir_7a3d096d100e917355aeba76f6cdb4a9.tex  dir_7bfadfec917ecdec65e2e04fdab137ec.tex  dir_97b73bdd358e9c5ab6ea9e23c645e087.tex  dir_a9f6fcf89ad48f46cc9c205933a20eaf.tex  dir_bb39ea59592983ec6ae19f64f49b4f72.tex  dir_be8373782f1de33088a64d663d68fee6.tex  hierarchy.tex  index.tex  md_README.tex  md_TecnicalDoc.tex  namespaces.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
doc/man/man3/: AccountsDB.3  ApiError.3  ChatController.3  ChatsDB.3  ClientSharedServer.3  DB.3  DatabaseManager.3  ImagesDB.3  InvalidUsernamePasswordException.3  JobifyServer.3  Json.3  Json_BuiltStyledStreamWriter.3  Json_CharReader.3  Json_CharReaderBuilder.3  Json_CharReader_Factory.3  Json_CommentStyle.3  Json_Exception.3  Json_FastWriter.3  Json_Features.3  Json_LogicError.3  Json_OurCharReader.3  Json_OurFeatures.3  Json_OurReader.3  Json_OurReader_StructuredError.3  Json_Path.3  Json_PathArgument.3  Json_Reader.3  Json_Reader_StructuredError.3  Json_RuntimeError.3  Json_StaticString.3  Json_StreamWriter.3  Json_StreamWriterBuilder.3  Json_StreamWriter_Factory.3  Json_StyledStreamWriter.3  Json_StyledWriter.3  Json_Value.3  Json_ValueConstIterator.3  Json_ValueIterator.3  Json_ValueIteratorBase.3  Json_Values.3  (+123 more)
src/: ApiError.h  CMakeLists.txt  ChatController.cpp  ChatController.h  ChatsDB.cpp  ChatsDB.h  ClientSharedServer.cpp  ClientSharedServer.h  Controlador.cpp  Controlador.h  ControladorPerfilUsuario.cpp  ControladorPerfilUsuario.h  DatabaseManager.cpp  DatabaseManager.h  Foo.cpp  Foo.h  HaversineDistance.h  JobifyServer.cpp  JobifyServer.h  NotificationSender.cpp  NotificationSender.h  ProfileController.cpp  ProfileController.h  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h  SharedServerController.cpp  SharedServerController.h  UsersDB.cpp  UsersDB.h
src/databases/: AccountsDB.cpp  AccountsDB.h  ChatsDB.cpp  ChatsDB.h  DB.cpp  DB.h  ImagesDB.cpp  ImagesDB.h  SessionsDB.cpp  SessionsDB.h  UsersDB.cpp  UsersDB.h  utils.cpp
src/exceptions/: InvalidUsernamePasswordException.h  KeyAlreadyExistsException.h  KeyDoesntExistException.h  TokenDoesntExistException.h  TokenInvalidException.h  UserAlreadyExistsException.h  UserDoesntExistException.h
src/mongoose-cpp/: Controller.cpp  JsonResponse.cpp  JsonResponse.h  Request.cpp  Server.cpp
test/: CMakeLists.txt  ClientSharedServerFixture.cpp  main.cpp
test/api_tests/: RestAPITest.py
test/db_tests/: ChatsDBFixture.cpp  SessionManagerFixture.cpp  SessionsDBFixture.cpp  UsersDBFixture.cpp
test/foo_tests/: CMakeLists.txt  FooFixture.cpp  basic_check.cpp
test/shared_server_tests/: ClientSharedServerFixture.cpp
(+876 files in other folders)
